typescript/checker/tests/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts:2:1
  |
2 | yield * [];
  | ^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts:2:9
  |
2 | yield * [];
  |         ^^

